--- a/docs/嵌入式/工具链.md
+++ b/docs/嵌入式/工具链.md
@@ -1,18 +1,26 @@
-- [ ] 想成为记事本编程大师吗？
+想成为记事本编程大师吗？
 
 ------
 
 
 
-#### C语言的编译过程：
+### C语言的编译过程：
 
+- 预处理：将源文件中的宏展开，对条件编译部分进行处理，头文件插入源文件
 
+- 编译：将预处理过的源文件转换成为汇编文件
 
-#### 工具链是什么：
+- 汇编：将汇编文件转换成为由二进制组成的目标文件
+
+- 链接：将所有目标文件和库链接在一起生成可执行程序
+
+  
+
+### 工具链是什么：
 
 编写一个（C语言）程序不过光需要编写源文件，在编写完成之后还需要考虑，如何将文件转化成为计算机可以执行的二进制程序，这个过程需要经历预**处理，编译，汇编，链接**这四个过程才能得到可执行程序，这时就需要一套专门的程序来进行这个过程，而这一套过程所需要的全部程序就是我们这里讲工具链。也许在初学的时候你没有注意过需要这样的程序来为我们做这样的事（那是因为IDE为我们做好了大部分的事情），但是如果想要进一步深入就需要掌握工具链搭建的过程。
 
-#### 编译器
+### 编译器
 
 在上面所说的源文件转化的过程中，大部分任务是由编译器完成的，编译器是相当复杂的，常见的C语言编译器如下
 
@@ -74,7 +82,7 @@ GCC的使用方法：
 
 
 
-#### make&cmake
+### Make&Cmake
 
 简介：
 
@@ -86,7 +94,7 @@ make语法：
 
 Cmake语法：
 
-#### 调试器：
+### 调试器：
 
 GDB
 
@@ -96,6 +104,6 @@ STlink:
 
 Jlink:
 
-Open
+OpenOCD：
 
-#### STM32CubMX:
+### STM32CubMX:
