--- a/docs/嵌入式/树莓派.md
+++ b/docs/嵌入式/树莓派.md
@@ -1,16 +1,87 @@
+> ## 一口一个树莓派
 
+### What's Raspberry Pi?
 
-#### 文件系统：
+树莓派是微型计算机，别看它只有一张信用卡大小，实际上它除了性能低其它和电脑没什么区别，能够轻松运行Linux炒作系统。同时它拥有着很强的拓展性，方便去手动探索了解计算机。树莓派是一个大的家族，下面有着许多系列和型号的版本，这里我仅介绍树莓派4B版本。(因为我只有这个😭)
 
-FAT32文件系统的U盘无法拷贝4GB以上的文件解决方法：
+<img src=".\Picture\树莓派型号参数.png" alt="树莓派型号参数" style="zoom: 25%;" />
 
-将通过CMD终端执行下面命令将文件系统改为ntfs格式
+### 开机必备：
 
-```bash
-convert F: /fs:ntfs	
+- 树莓派开发板，最好要有散热不然会降频影响性能
+- typeC供电线（要求5v/3A，所以直接接电脑上是不行的，测试后发现手机充电器/充电宝可以完美平替电源）
+- 显示屏，HDMI线（最好要有屏幕不然会很麻烦，虽然没屏幕也能解决）
+- TF卡16GB以上，和读卡器（用来烧录系统和做flash用）
+
+### 烧录程序：
+
+树莓派可以选用的系统有很多，基本上都是基于Linux的（有一说一树莓派拿来练习Linux真的很不错），这里我选用的是树莓派官方的系统：Raspberry Pi 操作系统（下面是官网链接选择适合自己型号的就行）
+
+树莓派系统下载：[官方地址](https://www.raspberrypi.com/software/operating-systems/#raspberry-pi-os-64-bit)
+
+下载好镜像后将其缓存在我们磁盘中任意位置都行，接着我们需要借助镜像烧录工具将系统文件烧录到TF卡之中，我们使用官方的镜像烧录工具：Raspberry Pi Imager（下面是官方下载地址）
+
+树莓派镜像烧录器：[官方地址](https://www.raspberrypi.com/software/)
+
+<img src=".\Picture\树莓派镜像烧录1.png" alt="树莓派镜像烧录1" style="zoom:33%;" />
+
+按NEXT之后，点击编辑设置，设置主机名，密码，和WIFI（不要用校园网，可以连热点或者实验室的路由器）
+
+<img src=".\Picture\树莓派镜像烧录2.png" alt="树莓派镜像烧录2" style="zoom: 33%;" />
+
+点击第二个菜单栏SERVICES把ssh服务打开然后开始烧录，这个过程可能会要10分钟左右的时间烧录完成后即可把TF卡插入树莓派，然后就可以上电启动了。
+
+### 远程连接：
+
+有屏幕的话，正常连接HDMI数据线接通电源树莓派就可以正常开机了（没屏幕的话插电也能开机但是你只能看见两个闪烁的LED灯）。
+
+开机后会自动连接到之前烧录时设置的网络上，如果像进行远程连接还需要知道树莓派的ip地址，在树莓派上连接键盘Ctrl+Alt+T打开终端输入ifconfig找到IP地址，记下来。
+
+<img src=".\Picture\ip查询.PNG" alt="ip查询" style="zoom:33%;" />
+
+然后可以选择以下方法连接：
+
+#### PuTTY连接：
+
+PuTTY软件进行ssh连接但是仅有终端，自行在官网下载，下载后在如下界面输入树莓派ip即可连接
+
+<img src=".\Picture\PuTTY连接.PNG" alt="PuTTY连接" style="zoom: 50%;" />
+
+然后accept它的警告后依次输入主机名（烧录时期的名字）和密码即可。
+
+#### Power shell连接:
+
+打开power shell输入：
+
+```powershell
+ssh 主机名@ip
 ```
 
+接着输入密码即可，如下图即可在powershell中使用树莓派终端
+
+<img src=".\Picture\powershell连接.PNG" alt="powershell连接" style="zoom:50%;" />
+
+#### Vnc远程桌面连接：
+
+下载地址：https://www.realvnc.com/en/connect/download/vnc/
+
+下载后在下图位置输入ip地址，然后在后面的对话框中依次输入主机名和密码即可
+
+<img src=".\Picture\Vnc连接.PNG" alt="Vnc连接" style="zoom: 33%;" />
+
+有点卡不是很推荐
+
+#### Windows自带的mstsc连接
+
+开始菜单搜索mstsc，在程序中输入树莓派信息即可连接，推荐使用，清晰流畅（甚至可以调分辨率）还能访问计算机本地磁盘（虽然会比较慢）
+
+![ms连接](.\Picture\ms连接.png)
+
+### 其它操作：
+
 #### apt换源：
+
+Linux系统的下载工具`apt`默认的下载地址是国外的服务器这会导致下载速度非常慢，因此需要更换国内的镜像源。
 
 在`/etc/apt/`目录下打开source.list文件添加需要的镜像网站。·
 
@@ -40,9 +111,7 @@ deb https://security.debian.org/debian-security bookworm-security main contrib n
 
 CSI（Camera Serial Interface）摄像头，就是排线连接的摄像头。
 
-在树莓派老版本的系统中可以通过`raspi-config`命令在`interface options`选项中打开`camera`选项来打开摄像头。
-
-使用`raspistill`命令来使用摄像头。
+在树莓派老版本的系统中可以通过`raspi-config`命令在`interface options`选项中打开`camera`选项来打开摄像头，使用`raspistill`命令来使用摄像头。
 
 在23年以后的系统中这一选项被移除，需要通过安装libcamera库来调用摄像头。
 
@@ -142,11 +211,11 @@ sudo apt install minicom
 minicom -s
 ```
 
-![minicom选项配置1](D:\Docs\Picture\minicom选项配置1.png)
+<img src=".\Picture\minicom选项配置1.png" alt="minicom选项配置1" style="zoom: 67%;" />
 
 选择第三个选项接口配置，然后按A添加要交流的串口挂载的路径（下图所示位置）
 
-![minicom操作2](D:\Docs\Picture\minicom操作2.png)
+<img src=".\Picture\minicom操作2.png" alt="minicom操作2" style="zoom:50%;" />
 
 然后enter, ESC返回上一界面接着选择`Save setup as dfl`选项来保存配置
 
@@ -154,7 +223,7 @@ minicom -s
 
 如果配置成功就会进入如下界面
 
-![minicom3](D:\Docs\Picture\minicom3.png)
+<img src=".\Picture\minicom3.png" alt="minicom3" style="zoom: 50%;" />
 
 常见操作：
 
@@ -277,3 +346,20 @@ pip config unset global.indexl-url	#pip删除源
 python -m venv venvdemo
 ```
 
+#### 文件系统：
+
+FAT32文件系统的U盘无法拷贝4GB以上的文件解决方法：
+
+将通过CMD终端执行下面命令将文件系统改为ntfs格式
+
+```cmd
+convert F: /fs:ntfs	
+```
+
+### 引脚拓展：
+
+树莓派4B上有40个IO引脚：
+
+<img src=".\Picture\树莓派引脚定义.png" alt="树莓派引脚定义" style="zoom: 80%;" />
+
+[树莓派的GPIO编程 - Vamei - 博客园](https://www.cnblogs.com/vamei/p/6751992.html)
