--- a/docs/嵌入式/工具链.md
+++ b/docs/嵌入式/工具链.md
@@ -1,8 +1,8 @@
-想成为记事本编程大师吗？
+> ## 想成为记事本编程大师吗？
 
-------
+### 工具链是什么：
 
-
+编写一个（C语言）程序不过光需要编写源文件，在编写完成之后还需要考虑，如何将文件转化成为计算机可以执行的二进制程序，这个过程需要经历预**处理，编译，汇编，链接**这四个过程才能得到可执行程序，这时就需要一套专门的程序来进行这个过程，而这一套过程所需要的全部程序就是我们这里讲工具链。也许在初学的时候你没有注意过需要这样的程序来为我们做这样的事（那是因为IDE为我们做好了大部分的事情），但是如果想要进一步深入就需要掌握工具链搭建的过程。
 
 ### C语言的编译过程：
 
@@ -14,17 +14,11 @@
 
 - 链接：将所有目标文件和库链接在一起生成可执行程序
 
-  
-
-### 工具链是什么：
-
-编写一个（C语言）程序不过光需要编写源文件，在编写完成之后还需要考虑，如何将文件转化成为计算机可以执行的二进制程序，这个过程需要经历预**处理，编译，汇编，链接**这四个过程才能得到可执行程序，这时就需要一套专门的程序来进行这个过程，而这一套过程所需要的全部程序就是我们这里讲工具链。也许在初学的时候你没有注意过需要这样的程序来为我们做这样的事（那是因为IDE为我们做好了大部分的事情），但是如果想要进一步深入就需要掌握工具链搭建的过程。
-
 ### 编译器
 
 在上面所说的源文件转化的过程中，大部分任务是由编译器完成的，编译器是相当复杂的，常见的C语言编译器如下
 
-电脑端编译器：
+#### PC编译器：
 
 - GCC：
 
@@ -66,7 +60,7 @@
 
   如何使用：[MSVC 编译器命令行语法 | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/build/reference/compiler-command-line-syntax?view=msvc-170&viewFallbackFrom=vs-2019)
 
-嵌入式编译器：
+#### 嵌入式编译器：
 
 因为编译器是要将源码转换成为机器码的，由于不同的处理器使用不同的指令集，因此相同的源码对于不同的处理器转换成的机器码也不相同。主流的PC计算机都是X86的处理器架构，而嵌入式设备则是arm架构，因此嵌入式开发使用的编译器和和上面介绍的编译器不同，主要由下面三种：
 
@@ -106,4 +100,3 @@ Jlink:
 
 OpenOCD：
 
-### STM32CubMX:
