--- a/docs/嵌入式/树莓派.md
+++ b/docs/嵌入式/树莓派.md
@@ -4,7 +4,7 @@
 
 树莓派是微型计算机，别看它只有一张信用卡大小，实际上它除了性能低其它和电脑没什么区别，能够轻松运行Linux炒作系统。同时它拥有着很强的拓展性，方便去手动探索了解计算机。树莓派是一个大的家族，下面有着许多系列和型号的版本，这里我仅介绍树莓派4B版本。(因为我只有这个😭)
 
-<img src=".\Picture\树莓派型号参数.png" alt="树莓派型号参数" style="zoom: 25%;" />
+<img src=".\Picture\树莓派型号参数.png" alt="树莓派型号参数"  />
 
 ### 开机必备：
 
@@ -23,11 +23,11 @@
 
 树莓派镜像烧录器：[官方地址](https://www.raspberrypi.com/software/)
 
-<img src=".\Picture\树莓派镜像烧录1.png" alt="树莓派镜像烧录1" style="zoom:33%;" />
+<img src=".\Picture\树莓派镜像烧录1.png" alt="树莓派镜像烧录1"  />
 
 按NEXT之后，点击编辑设置，设置主机名，密码，和WIFI（不要用校园网，可以连热点或者实验室的路由器）
 
-<img src=".\Picture\树莓派镜像烧录2.png" alt="树莓派镜像烧录2" style="zoom: 33%;" />
+<img src=".\Picture\树莓派镜像烧录2.png" alt="树莓派镜像烧录2"  />
 
 点击第二个菜单栏SERVICES把ssh服务打开然后开始烧录，这个过程可能会要10分钟左右的时间烧录完成后即可把TF卡插入树莓派，然后就可以上电启动了。
 
@@ -37,7 +37,7 @@
 
 开机后会自动连接到之前烧录时设置的网络上，如果像进行远程连接还需要知道树莓派的ip地址，在树莓派上连接键盘Ctrl+Alt+T打开终端输入ifconfig找到IP地址，记下来。
 
-<img src=".\Picture\ip查询.PNG" alt="ip查询" style="zoom:33%;" />
+<img src=".\Picture\ip查询.PNG" alt="ip查询"  />
 
 然后可以选择以下方法连接：
 
@@ -45,7 +45,7 @@
 
 PuTTY软件进行ssh连接但是仅有终端，自行在官网下载，下载后在如下界面输入树莓派ip即可连接
 
-<img src=".\Picture\PuTTY连接.PNG" alt="PuTTY连接" style="zoom: 50%;" />
+<img src=".\Picture\PuTTY连接.PNG" alt="PuTTY连接"  />
 
 然后accept它的警告后依次输入主机名（烧录时期的名字）和密码即可。
 
@@ -59,7 +59,7 @@ ssh 主机名@ip
 
 接着输入密码即可，如下图即可在powershell中使用树莓派终端
 
-<img src=".\Picture\powershell连接.PNG" alt="powershell连接" style="zoom:50%;" />
+<img src=".\Picture\powershell连接.PNG" alt="powershell连接"  />
 
 #### Vnc远程桌面连接：
 
@@ -67,7 +67,7 @@ ssh 主机名@ip
 
 下载后在下图位置输入ip地址，然后在后面的对话框中依次输入主机名和密码即可
 
-<img src=".\Picture\Vnc连接.PNG" alt="Vnc连接" style="zoom: 33%;" />
+<img src=".\Picture\Vnc连接.PNG" alt="Vnc连接"  />
 
 有点卡不是很推荐
 
