--- a/docs/基础知识/1.电脑硬件配置简介.md
+++ b/docs/基础知识/1.电脑硬件配置简介.md
@@ -1,3 +1,9 @@
+前言：
+
+我在上大学之后才真正意义上接触电脑，因此有许多基础性的概念我并不清楚，这使得对计算机或者程序的进一步学习十分困难，因此我在大一的时候写下了基础知识部分，算才有了对计算机的初步认知，希望也能帮助其他对计算机不那么熟悉的同学。
+
+[计算机硬件基础_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1TL4y1N7ZM/?spm_id_from=333.999.0.0&vd_source=6bb92a819dfdcd7bd3bc4e88195b918d)
+
 ### CPU:
 
 计算机进行数据运算的核心，主频越高运算越快，主流的PC芯片由英特尔和超威两家公司提供。
