--- a/docs/基础知识/2.windows操作简介.md
+++ b/docs/基础知识/2.windows操作简介.md
@@ -1,3 +1,7 @@
+计算机的正常运作除了依托于硬件更离不开操作系统的调度，我们的个人计算机大多都使用Windows操作系统，它就像一扇让大家窥探计算机的窗户，让我们指挥计算机。这部分内容我们就来了解一下Windows。
+
+[Windows11教学：计算机基础实战_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1vR4y1Q7iF/?spm_id_from=333.999.0.0)
+
 ### **历史常识**
 
 现在使用的Windows系统是以图形用户界面为基础研发的操作系统，而图形用户界面（GUI）最早由施乐（一家研发打印机的公司提出），后来被apple拿去优化做出了当时很惊艳的图形界面，再后来微软也根据这个做出了Windows系统。
