--- a/docs/基础知识/3.从终端开始的系统结构探秘.md
+++ b/docs/基础知识/3.从终端开始的系统结构探秘.md
@@ -67,7 +67,7 @@ kernel和shell一样是操作系统的一部分，是真正与硬件交互的那
 Windows API又叫做 API 函数， 是 Windows 的核心，从技术上讲，我们技术人员在 Windows 操作系统里做技术开发，Windows 对我们技术人员来说，里面有大量的 API 函数。
 API 叫做 “应用程序编程接口”（Application Programming Interface） ，在使用各种各样的编程语言在 Windows 平台上开发时，都可以使用 API函数。做程序设计、软件开发，肯定要调用或者说是使用  Windows 里已经做好的那些 API 函数。
 
-微软在做 Windows 时，几万人做了十几年做出了大量API函数， Windows 自身在用这些函数，而程序员也可以调用这些函数。
+微软在做 Windows 时，数千名工程师在十几年的时间里编写出了大量API函数， Windows 自身在用这些函数，而程序员也可以调用这些函数。
 
 再看一下C 标准库的解释：
 
