--- a/docs/基础知识/4.编程世界里的尚方宝剑.md
+++ b/docs/基础知识/4.编程世界里的尚方宝剑.md
@@ -39,7 +39,7 @@
 
 DeBugger（调试器）是自从计算机诞生伊始就始终伴随着程序员的一个挚友，起初的调试器都是基于硬件直接实现的。这个很好理解，就是控制软件运行、查看软件运行中信息、修改软件执行流程等作用，通俗的讲调试器是用来在程序运行以后，根据运行状况来检查错误，Keil5上的DeBug功能就是靠他进行的。
 
-#### 常用IDE
+#### 常见的IDE
 
 ![常用IDE](./Picture/常用IDE.png)
 
@@ -73,7 +73,7 @@ DeBugger（调试器）是自从计算机诞生伊始就始终伴随着程序员
 
 #### 语言类型
 
-我们知道任何代码最终都要被“翻译”成二进制的形式（机器码）才能在计算机中执行。
+我们知道任何代码最终都要被“翻译”成二进制的形式（机器码）才能在计算机中执行。但是他们翻译成为机器码的方式依旧有所不同。
 
 ##### 编译型语言：
 
@@ -88,7 +88,7 @@ DeBugger（调试器）是自从计算机诞生伊始就始终伴随着程序员
 - 编译型语言的优点是执行速度快、对硬件要求低、保密性好，适合开发操作系统、大型应用程序、数据库等。
 - 解释型语言的优点是使用灵活、部署容易、跨平台性好，非常适合Web开发以及小工具的制作。
 
-因为shell是一个命令行解释器，所以就可以用来解释shell脚本，因此根据它的这种编译特点shell也是一种脚本语言。（这里可以类比于python,python也是一种脚本语言也需要通过python解释器来翻译源文件进而执行命令）
+综上所述shell也可以算一个命令行解释器，因为它可以用来解释shell脚本，因此根据它的这种编译特点shell也是一种脚本语言。（这里可以类比于python,python也是一种脚本语言也需要通过python解释器来翻译源文件进而执行命令）
 
 
 
