--- a/docs/基础知识/3.从终端开始的系统结构探秘.md
+++ b/docs/基础知识/3.从终端开始的系统结构探秘.md
@@ -1,6 +1,6 @@
 ### **终端**
 
-人们所能看到，接触到的都是计算机最外围设计好与人做交互的部分，这一部分都被称为终端（你要是硬要把电脑拆开看看它的心当我没说），因此计算机与用户交互的部分就是终端。
+人们所能看到，接触到的都是计算机最外围设计好与人做交互的部分，这一部分都被称为终端，因此终端就是计算机与用户交互的部分。
 
 	计算机 = 主机 + 终端
 	
