--- a/docs/计算机组成/计算机基本结构.md
+++ b/docs/计算机组成/计算机基本结构.md
@@ -14,15 +14,8 @@
 
 定点数：小数点的位置固定，以二进制为例，小数点前面每一位乘以2的正数次幂表示整数部分，后面的位乘以2的负数次幂表示小数部分（实际上整数就是小数点固定在最左端的定点数）。
 
-浮点数：小数点的位置并不固定，通过“科学计数法”的方式来改变小数点的位置，例如C语言中的`float`类型数据占32位，其中包含1位标志位，23位有效位，8位表示有符号的指数大小。以二进制浮点数举例，如果有效位的值为`A`，8位指数位的大小为`B`,那么这个浮点数的大小为`+/-A*2EB`，注意有效位的小数点始终在第一个不为`0`的位之后。
+浮点数：小数点的位置并不固定，通过“科学计数法”的方式来改变小数点的位置，例如C语言中的`float`类型数据占32位，其中包含1位标志位，23位有效位，8位表示有符号的指数大小。以二进制浮点数举例，如果有效位的值为`A`，8位指数位的大小为`B`,那么这个浮点数的大小为`A*2的B次幂`，注意有效位的小数点始终在第一个不为`0`的位之后。
 
-公式如下：
-$$
-(−1) 
-s
- ×1.m×2 
-e
-$$
 为什么要使用浮点数呢？实际上使用相同的内存空间，浮点数能够表示的数值范围要比定点数大，为了满足更高的精度要求计算机中通常使用浮点数表示小数。32位浮点数表示的数的范围表示的范围大约在`+/-10E+/-38`之间，而定点数能表示的最小小数仅有`10E-10`。
 
 ##### **并行：**
