--- a/docs/基础知识/2.windows操作简介.md
+++ b/docs/基础知识/2.windows操作简介.md
@@ -1,6 +1,8 @@
-计算机的正常运作除了依托于硬件更离不开操作系统的调度，我们的个人计算机大多都使用Windows操作系统，它就像一扇计算机上的窗户，让我们通过它看到计算机的方方面面。这部分内容我们就来了解一下Windows操作系统的一些基础知识。
+### 前言
 
-推荐教学视频：[Windows11教学：计算机基础实战](https://www.bilibili.com/video/BV1vR4y1Q7iF/?spm_id_from=333.999.0.0)
+计算机的正常运作除了依托于硬件更离不开操作系统的调度，相信大多数人第一次接触的计算机操作系统都是Windows，Windows操作系统。它就像一扇计算机上的窗户，让我们能够看到计算机的方方面面。
+
+推荐视频：[Windows11教学：计算机基础实战](https://www.bilibili.com/video/BV1vR4y1Q7iF/?spm_id_from=333.999.0.0)
 
 ### **历史常识**
 
@@ -13,9 +15,7 @@
 - Windows 10 	 2015
 - Windows 11	  2021
 
-![XP](./Picture/XP.jpg)
-
-XP系统经典的蓝天白云绿草地😌
+![Windows](./Picture/Windows.jpg)
 
 ### **环境变量**
 
@@ -35,7 +35,7 @@ XP系统经典的蓝天白云绿草地😌
 
  %TEMP%这个环境变量表示的就是电脑存放临时文件的绝对路径，不管你的临时文件是存放在C盘还是D盘只要在文件资源管理器路径栏里输入%TEMP%，它就会跳转到你存放临时文件的位置。
 
-绝对路径和相对路径：
+**绝对路径和相对路径：**
 
 - ​	绝对路径：从根目录为起点到某一个目录的路径。
 
@@ -162,17 +162,12 @@ INI文件:
 
 ### **磁盘分区**
 
-右键win图标打开“磁盘管理”右键磁盘可以点击压缩卷进行压缩，如果磁盘有空闲空间可以进行新建卷和扩展卷（扩展卷时空闲空间必须和目标扩展盘相邻）。
+Windows的磁盘空间通过盘符进行划分，可以通过磁盘管理工具来划分磁盘空间，右键win图标打开“磁盘管理”右键磁盘可以点击压缩卷进行压缩，如果磁盘有空闲空间可以进行新建卷和扩展卷（扩展卷时空闲空间必须和目标扩展盘相邻）。
 一般C盘是系统盘，需要预留足够的空间，否则可能会造成计算机卡顿，如果需要进行c盘扩容可以使用傲梅分区助手。
 
 ![磁盘分区](./Picture/磁盘分区.png)
 
-### **装系统**
 
-可以从微软官方网站获取windows系统的下载文件，不过需要密钥激活，安装时可以先跳过。
-也可以从下面这个网站上获取你需要的操作系统：https://msdn.itellyou.cn/			
-
-准备一个8G左右的空U盘（装系统时会格式化硬盘）然后把官网的下载文件下载进去，在电脑启动时根据不同的主板在开机时按不同的按键，选择用U盘启动，然后上网上找教程。。。。。。我也没装过系统等以后实践过后再看看有没有什么补充的吧。
 
 ### **系统盘清理**
 
@@ -216,9 +211,16 @@ adobe暂存盘更改；
 		    电脑文件太乱了，你想恢复出厂设置就可以重置系统，前提是你的电脑还可以正常开机。在设置系统恢复里设置，重置系统时只会对系统盘重置，可以选择保留个人文件（就是用户文件夹里的东西），还可以选在云下载（从官网上下载最新的系统）或者本地下载（还是下载当前版本），后面的设置如果选择删除所有驱动器那么你的电脑就会被彻底净化（所有盘都被清空）。
 
 **（2）重做系统：**
-			电脑蓝屏了，开不了机。这时就需要用U盘重装系统，在U盘中烧录系统，开机时进入BIOS（BIOS 是计算机启动时加载的第一个软件，BIOS 的设置直接关系到电脑是否可以正常启动，并影响到之后的使用效率。Windows 操作系统，也是在 BIOS 的引导下进行工作的。） 切换U盘启动。
+			电脑蓝屏了，开不了机。这时就需要用U盘重装系统，在U盘中烧录系统，开机时进入BIOS切换U盘启动。（BIOS 是计算机启动时加载的第一个软件，BIOS 的设置直接关系到电脑是否可以正常启动，并影响到之后的使用效率。Windows 操作系统，也是在 BIOS 的引导下进行工作的） 
 
 
+
+### **装系统**
+
+可以从微软官方网站获取windows系统的下载文件，不过需要密钥激活，安装时可以先跳过。
+也可以从下面这个网站上获取你需要的操作系统：	[MSDN, 我告诉你 - 做一个安静的工具站](https://msdn.itellyou.cn/)
+
+准备一个8G左右的空U盘（装系统时会格式化硬盘）然后把系统的镜像文件下载进去，在电脑启动时进入BIOS选择U盘启动（不同主板的进入BIOS选项的按键不同详情网上查阅），然后根据引导进行安装。
 
 
 
