--- a/docs/基础知识/4.编程世界里的尚方宝剑.md
+++ b/docs/基础知识/4.编程世界里的尚方宝剑.md
@@ -1,8 +1,6 @@
 #### 引言
 
-上一篇咱们整明白了操作系统的大体框架，现在有了这个框架我们要考虑一下如何在这个框架下进行我们想要的创作——编程。但想要编写程序我们需要有趁手的武器，这篇文章用来介绍我们需要使用什么样的武器编写我们想要得到的程序的。
-
-一般情况下我们写代码都是在专门的软件上编写的，比如学校机房上的Dev-c++，或者Visual studio，亦或者pycharm等等等等，这些软件都是用来写代码的，它们其实有一个统一的名字——集成开发环境（IDE）。
+一般情况下我们写代码都是在专门的软件上编写的，比如学校机房上的Dev-c++（真心建议尽早弃坑），或者Visual studio，亦或者pycharm等等等等，这些软件都是用来写代码的，它们其实有一个统一的名字——集成开发环境（IDE）。
 
 #### 基础概念
 
