--- a/docs/嵌入式/Stm32/通信协议.md
+++ b/docs/嵌入式/Stm32/通信协议.md
@@ -1,6 +1,10 @@
 # 通信协议
 
-### 1.串口通信：
+
+
+![常见通信](./Picture/常见通信.gif)
+
+### USART
 
 串口通信属于全双工串行通信，分为异步（无时钟线）和同步（有）两种通讯方式，F1开发板有五个串口1，2(usart)支持两种方式，剩下的（uart）仅支持异步通讯.
 
@@ -22,9 +26,11 @@
 
 ![usart中断](https://pickingchip.github.io/%E5%B5%8C%E5%85%A5%E5%BC%8F/Stm32/Picture/usart%E4%B8%AD%E6%96%AD.png)
 
-### 2.IIC(Inter-Integrated Circuit) 通信：
 
-概括：IIC总线是一种两线式串行总线，由数据线SDA和时钟线SCL组成，默认情况下两条总线均为高电平，两条总线上可以挂载多设备，支持多主多从，半双工通信。
+
+### IIC
+
+概括：IIC(Inter-Integrated Circuit) 总线是一种两线式串行总线，由数据线SDA和时钟线SCL组成，默认情况下两条总线均为高电平，两条总线上可以挂载多设备，支持多主多从，半双工通信。
 
 信号：
 
@@ -56,13 +62,13 @@ IIC中断：
 
 IIC模式：
 
-IIC通信的实现通常通过GPIO模拟IIC时序的和使用IIC外设两种方式：
+IIC的实现方式通常有软件IIC和硬件IIC两种方式，软件IIC的实现依托于GPIO配合延时函数模拟IIC时序的方法实现。
 
-软件IIC的实现可以参考整点原子例程使用GPIO模拟电平信号的方法实现。
 
-### 3.SPI（Serial Peripheral interface ）通信：
 
-概括：SPI通信需要3+n(从机个数)条总线，仅支持一主多从，传输方式有单双工，半双工，全双工三种方式。
+### SPI
+
+概括：SPI（Serial Peripheral interface ）通信需要3+n(从机个数)条总线，仅支持一主多从，传输方式有单双工，半双工，全双工三种方式。
 
 工作原理：
 
