--- a/docs/嵌入式/Stm32/重要外设.md
+++ b/docs/嵌入式/Stm32/重要外设.md
@@ -1,8 +1,8 @@
 ## 重要外设：
 
-### GPIO（General-purpose input/output）
+### GPIO
 
-GPIO是控制或者采集外部器件的信息的外设 （其实就是一堆和芯片相连的引脚，毕竟芯片靠电信号交流），你可以把它理解为芯片的嘴巴和耳朵（虽然他俩长在一块）是芯片用于和外部交流的窗口。
+GPIO（General-purpose input/output）是控制或者采集外部器件的信息的外设 （其实就是几组从芯片引出的引脚），你可以把它理解为芯片的嘴巴和耳朵（芯片靠读取引脚上的电平信号与外界交流）是芯片用于和外部交流的窗口。
 
 f103有四组GPIO口（GPIOA~GPIOD）共51个IO口 （查表带有TF标志的兼容5V）
 
@@ -21,13 +21,13 @@ GPIO 有八种工作模式，分别是：
 
 STM32的 io 有3类功能 ：一个是默认的， 一个是复用， 一个是重映射功能。
 
-### NVIC和EXTI
+### NVIC/EXTI
 
 在讲外设之前，先解释中断这个概念，我们应该知道在MCU处理同一时间只能处理一个任务，因此如果我们的单片机正在执行任务A时突然需要处理任务B，这就需要把任务A打断，去执行完任务B，然后再回来执行任务A，这个过程就是中断。
 
-#### NVIC (Nested vectored interrupt controller)
+#### NVIC 
 
-NVIC是嵌套向量中断控制器，人话就是管理中断请求的东西，它是属于内核内部。M3内核支持256种中断（16个系统中断，240个外部中断），然而F103RCT6只用了10种系统中断和60个外部中断，这些中断记录在中断向量表中，在stm32f103xe.h 文件中被定义。
+NVIC(Nested vectored interrupt controller)是嵌套向量中断控制器，人话就是管理中断请求的东西，它是属于内核内部。M3内核支持256种中断（16个系统中断，240个外部中断），然而F103RCT6只用了10种系统中断和60个外部中断，这些中断记录在中断向量表中，在stm32f103xe.h 文件中被定义。
 
 NVIC的寄存器有：
 
@@ -40,9 +40,9 @@ NVIC的寄存器有：
 
 **ps.**f1中只用到了寄存器的一小部分，同时优先级寄存器每个也只用到了高四位，高四位也被分为两部分用于编写抢断优先级和响应优先级，这两个部分各占多少位由SCB->AIRCR 寄存器的 bit10~8 来定义，中断优先级相同那么中断向量表中的排序越小优先级越高。
 
-#### EXTI(External interrupt/event controller)
+#### EXTI
 
-EXTI是外部中断和事件控制器，前面讲过NVIC是属于内核的，而外设想要申请中断都需要通过IO口向NVIC发起请求，这些外部中断的申请都要先经过EXTI的管理才能输入到内核去触发中断。
+EXTI(External interrupt/event controller)是外部中断和事件控制器，前面讲过NVIC是属于内核的，而外设想要申请中断都需要通过IO口向NVIC发起请求，这些外部中断的申请都要先经过EXTI的管理才能输入到内核去触发中断。
 
 EXTI 有两大功能分别产生中断与产生事件（随着程序进行产生的变化都可以称为事件，需要MCU紧急处理的事件称为中断，这里的事件指的是需要其它外设进行处理的事件）
 
@@ -68,9 +68,9 @@ void EXTI9_5_IRQHandler();
 void EXTI15_10_IRQHandler();
 ```
 
-### DMA（Direct Memory Access）
+### DMA
 
-DMA翻译过来就是直接存储器访问，作用就是在不同外设，存储器之间传递数据。不使用DMA，外设想要访问内存空间就需要经过CPU的调度，这就会占用CPU宝贵的时间，因此DMA存在的意义就是将CPU从传递数据的这种“体力活”中解放出来，使外设可以通过DMA直接访问内存空间。
+DMA（Direct Memory Access）翻译过来就是直接存储器访问，作用就是在不同外设，存储器之间传递数据。不使用DMA，外设想要访问内存空间就需要经过CPU的调度，这就会占用CPU宝贵的时间，因此DMA存在的意义就是将CPU从传递数据的这种“体力活”中解放出来，使外设可以通过DMA直接访问内存空间。
 
 f1的有两个DMA控制器，DMA1有7个通道，DMA2有5个通道，每一个通道管理着不同外设，不同通道的请求根据优先级来执行，并且每一个通道同一时间只能处理一个外设的传输请求
 
