--- a/docs/嵌入式/other/树莓派.md
+++ b/docs/嵌入式/other/树莓派.md
@@ -2,6 +2,8 @@
 
 ### What's Raspberry Pi?
 
+![rpi](./Picture/rpi.png)
+
 树莓派是微型计算机，别看它只有一张信用卡大小，实际上它除了性能低其它和电脑没什么区别，能够轻松运行Linux炒作系统。同时它拥有着很强的拓展性，方便去手动探索了解计算机。树莓派是一个大的家族，下面有着许多系列和型号的版本，这里我仅介绍树莓派4B版本。(因为我只有这个😭)
 
 ![树莓派型号参数](./Picture/树莓派型号参数.png)
@@ -54,7 +56,7 @@ PuTTY软件进行ssh连接但是仅有终端，自行在官网下载，下载后
 打开power shell输入：
 
 ```powershell
-ssh 主机名@ip
+ssh 用户名@ip
 ```
 
 接着输入密码即可，如下图即可在powershell中使用树莓派终端
@@ -73,9 +75,31 @@ ssh 主机名@ip
 
 #### Windows自带的mstsc连接
 
+在树莓派上下载远程端
+
+```shell
+sudo apt-get install xrdp
+```
+
 开始菜单搜索mstsc，在程序中输入树莓派信息即可连接，推荐使用，清晰流畅（甚至可以调分辨率）还能访问计算机本地磁盘（虽然会比较慢）
 
 ![ms连接](.\Picture\ms连接.png)
+
+
+
+如果远程连接失败请检查树莓派与主机是否连接同一WiFi，如果成功连接但是显示黑屏，可能是本地登录和远程登陆冲突（有一个显示另一个就不显示）可采用以下方法解决：
+
+```shell
+sudo vim vim /etc/xrdp/startwm.sh
+
+#在文件中做以下更改
+unset DBUS_SESSION_BUS_ADDRESS
+unset XDG_RUNTIME_DIR
+#重启xrdp服务
+sudo systemctl restart xrdp.service
+```
+
+
 
 ### 其它操作：
 
