--- a/docs/嵌入式/工具链/构建工具.md
+++ b/docs/嵌入式/工具链/构建工具.md
@@ -6,17 +6,19 @@
 
 有价值的程序通常是由许多源文件，头文件组成的大工程，（~~单个文件编写的程序大多都没有太大价值~~），当你编译这样的大工程时，如何使用编译器按照依赖关系依次编译源文件并链接就成了一个让人头疼的问题。这时候人们想到能不能有一个程序代替人去指挥编译器完成项目的编译，于是便有了`make`，人们只需要将需要编译的程序的依赖写到`makefile`这个文本文件当中（当然这是要遵循特定语法的），`make`便会根据这个文件去指挥编译生成可执行文件。
 
-![make工作流程](https://pickingchip.github.io/%E5%B5%8C%E5%85%A5%E5%BC%8F/%E5%B7%A5%E5%85%B7%E9%93%BE/Picture/make%E5%B7%A5%E4%BD%9C%E6%B5%81%E7%A8%8B.png)
+![make工作流程](./Picture/make工作流程.png)
 
 然而对于大项目来说手动去编写`makefile`依旧是个麻烦的事情，同时对于相同的源文件在不同的平台上编译需要调用不同的编译器，如果每一次更改平台都需要重新编写`makefile`那实在是令人头疼。于是人们编写了`Cmake`程序根据不同平台生成`makefile`以供`make`调用（~~没错偷懒是人类进步的阶梯~~），当然`Cmake`生成`makefile`需要根据`makelist.txt`这个文本文件，但是这个文本文件又需要人去手动编写。是不是感觉有点套娃的意味？但是这样做并不是毫无意义，`makelist.txt`只需要编写一次就可以在不同的平台上使用，同时它使用了更高级的语法使得依赖关系的编写更加简洁有利于维护。
 
-![Cmake工作流程](https://pickingchip.github.io/%E5%B5%8C%E5%85%A5%E5%BC%8F/%E5%B7%A5%E5%85%B7%E9%93%BE/Picture/Cmake%E5%B7%A5%E4%BD%9C%E6%B5%81%E7%A8%8B.png)
+![Cmake工作流程](./Picture/Cmake工作流程.png)
 
-ps.msbuild和xcodemake分别是Windows和Mac平台上的构建系统
+msbuild和xcodemake分别是Windows和Mac平台上的构建系统起到的作用类似
 
-参考博客：
+![msbuild流程](./Picture/msbuild流程.png)
 
-[zhen's blog](https://zhen.blog/2023/09/12/2023-09-12-C与CPP常见编译工具链与构建系统简介/)
+参考博客：[zhen's blog](https://zhen.blog/2023/09/12/2023-09-12-C与CPP常见编译工具链与构建系统简介/)
+
+
 
 #### make基础使用：
 
@@ -92,6 +94,7 @@ cmake --build . #使用这个命令或者下面的命令来构建可执行程序
 make
 ```
 
-其他案例：[一个CMake 案例](https://zhuanlan.zhihu.com/p/500002865)
 
-详细教程：[Cmake教程](https://subingwen.cn/cmake/CMake-primer)
+
+其他教程：[一个CMake 案例](https://zhuanlan.zhihu.com/p/500002865)    [Cmake教程](https://subingwen.cn/cmake/CMake-primer)
+
