--- a/docs/嵌入式/工具链/编辑器.md
+++ b/docs/嵌入式/工具链/编辑器.md
@@ -1,8 +1,12 @@
 # 编辑器
 
+### 前言
+
+不管你写什么代码你都须要编辑器来帮你编辑文本，一个优秀的编辑器能够跟大程度上提高开发效率，甚至影响写代码时的心情。
+
 ### VScode
 
-非常强大的现代化编辑器，通过配置工具链你可以完成很多方面的开发。
+非常强大的现代化编辑器，拥有现代的UI界面和大量的的插件支持，通过配置工具链可以进行多方面的开发。
 
 插件：
 
