--- a/docs/嵌入式/工具链/编译器.md
+++ b/docs/嵌入式/工具链/编译器.md
@@ -2,9 +2,9 @@
 
 > 想成为记事本编程大师吗？
 
-### 工具链是什么：
+### 前言：工具链是什么
 
-编写一个（C语言）程序不过光需要编写源文件，在编写完成之后还需要考虑，如何将文件转化成为计算机可以执行的二进制程序，这个过程需要经历预**处理，编译，汇编，链接**这四个过程才能得到可执行程序，这时就需要一套专门的程序来进行这个过程，而这一套过程所需要的全部程序就是我们这里讲工具链。也许在初学的时候你没有注意过需要这样的程序来为我们做这样的事（那是因为IDE为我们做好了大部分的事情），但是如果想要进一步深入就需要掌握工具链搭建的过程。
+编写一个（C语言）程序不过光需要编写源文件，在编写完成之后还需要考虑，如何将文件转化成为计算机可以执行的二进制程序，这个过程需要经历预**处理，编译，汇编，链接**这四个过程才能得到可执行程序，这时就需要一套专门的程序来进行这个过程，而这一套过程所需要的全部程序就是我们这里讲工具链。也许在初学C语言的时候我们没有注意过这些过程都需要哪些程序（那是因为IDE为我们做好了大部分的事情），但是如果想要进一步深入就需要掌握工具链搭建的过程。
 
 ### 编译过程
 
@@ -20,11 +20,11 @@ C语言的源文件要转换成可执行文件需要经历以下四步：
 
 ### 编译器概念
 
-在上面所说的源文件转化的过程中，大部分任务是由编译器完成的，编译器是相当复杂的，常见的C语言编译器如下
+在上面所说的编译过程中，大部分任务是由编译器完成的，常见的C语言编译器如下
 
 #### PC编译器：
 
-- GCC：
+- **GCC：**
 
   GCC(**GNU Compiler Collection**)是一个由GNU组织编写的开源的编译器，在最开始的时候它仅作为C语言编译器（所以它的原名是“GNU C Compiler”），后来逐渐支持多种语言（如C++、Go等）便改为现在的名字。它能支持多种操作系统，如Linux，Windows，Mac等。
 
@@ -36,9 +36,11 @@ C语言的源文件要转换成可执行文件需要经历以下四步：
 
   2.在Windows平台上使用GCC需要下载MinGW（*Minimalist* GNU *for Windows*），然后将所下载文件夹中的`/bin`目录添加到环境变量当中，就可以在终端中使用gcc命令了。
 
-  3.在Mac平台获取，没玩过我也不造啊。
+  下载地址：[MinGW - Minimalist GNU for Windows - Browse Files at SourceForge.net](https://sourceforge.net/projects/mingw/files/)
 
-- Clang：
+  
+
+- **Clang：**
 
   Clang编译器是由苹果公司开发的，最开始的时候苹果公司也是使用GCC的，据说是苹果想要实现一些C语言的特性但是GNU的人不给苹果添加，于是苹果公司便开始研发自家的编译器，这才有了Clang（~~Only Apple can do~~），但是Clang也是开源的。
 
@@ -51,7 +53,9 @@ C语言的源文件要转换成可执行文件需要经历以下四步：
 
   如何配置： [在Windows下配置Clang编译器](https://www.cnblogs.com/RioTian/p/17758813.html)
 
-- MSVC：
+  
+
+- **MSVC：**
 
   MSVC(Microsoft Visual C++)是微软公司的C/C++开发工具，Windows原生环境不提供类似**gcc**，**Clang**的C/C++语言源程序编译运行工具链，它的编译器都是包含在集成开发环境里的（当然这不是开源的），可以通过下载Microsoft Visual Studio来获取。
 
@@ -63,6 +67,8 @@ C语言的源文件要转换成可执行文件需要经历以下四步：
 
   如何使用：[MSVC 编译器命令行语法 | Microsoft Learn](https://learn.microsoft.com/zh-cn/cpp/build/reference/compiler-command-line-syntax?view=msvc-170&viewFallbackFrom=vs-2019)
 
+
+
 #### 嵌入式编译器：
 
 因为编译器是要将源码转换成为机器码的，由于不同的处理器使用不同的指令集，因此相同的源码对于不同的处理器转换成的机器码也不相同。主流的PC计算机都是X86的处理器架构，而嵌入式设备则是arm架构，因此嵌入式开发使用的编译器和和上面介绍的编译器不同，主要由下面三种：
@@ -71,9 +77,9 @@ C语言的源文件要转换成可执行文件需要经历以下四步：
 - armclang (AC6):基于Clang开发的arm平台编译器，并不开源
 - Arm GNU 工具链：开源的arm开发工具链，不止支持arm开发。
 
-官网位置：[用于嵌入式的 AC6编译器](https://developer.arm.com/Tools and Software/Arm Compiler for Embedded)
+官网下载：[用于嵌入式的 AC6编译器](https://developer.arm.com/Tools and Software/Arm Compiler for Embedded)        [GNU Arm 嵌入式工具链下载](https://developer.arm.com/downloads/-/gnu-rm)
 
- [GNU Arm 嵌入式工具链下载](https://developer.arm.com/downloads/-/gnu-rm)
+
 
 ### GCC的使用
 
@@ -93,25 +99,6 @@ $ gcc -E -o test.i test.c #-C选项可以阻止删除注释，
 
 ```
 $ gcc -S test.c #加上-fverbose-asm选项可以将C语言中变量名作为注释
-```
-
-eg.
-
-```
- # test.c:4: {
-    call    __main   #
- # test.c:5:    for(int j = 1; j < 10; j++)
-    movl    $1, -4(%rbp)     #, j
- # test.c:5:    for(int j = 1; j < 10; j++)
-    jmp .L2  #
-.L5:
- # test.c:7:         for(int i = 0; i < j; i++)
-    movl    $0, -8(%rbp)     #, i
- # test.c:7:         for(int i = 0; i < j; i++)
-    jmp .L3  #
-.L4:
- # test.c:9:                 printf("*");
-    movl    $42, %ecx    #,
 ```
 
 汇编
